crates/solidity/testing/snapshots/bindings_output/control/unchecked/generated/0.6.0-failure.txt
# This file is generated automatically by infrastructure scripts (crates/solidity/outputs/cargo/tests/src/bindings_output/runner.rs:37:18). Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or EmitKeyword or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or PayableKeyword or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or TrueKeyword or TryKeyword or TypeKeyword or UfixedKeyword or UintKeyword or WhileKeyword.
   ╭─[input.sol:4:9]
   │
 4 │ ╭─▶         unchecked { return c - b; }
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── name: 1
 2 │     function sub(uint a, uint b) public returns (uint) {
   │              ─┬─      ┬       ┬  
   │               ╰────────────────── name: 2
   │                       │       │  
   │                       ╰────────── name: 3
   │                               │  
   │                               ╰── name: 4
 3 │         uint c = a;
   │              ┬   ┬  
   │              ╰────── name: 5
   │                  │  
   │                  ╰── ref: 3
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ ╭─│ ▶ contract Test {
 2 │ │ ╭─▶     function sub(uint a, uint b) public returns (uint) {
   │ │ │                    ───┬── ───┬───  
   │ │ │                       ╰──────────── definiens: 3
   │ │ │                              │     
   │ │ │                              ╰───── definiens: 4
 3 │ │ │           uint c = a;
   │ │ │   ──────────┬─────────  
   │ │ │             ╰─────────── definiens: 5
   ┆ ┆ ┆   
 5 │ │ ├─▶     }
   │ │ │           
   │ │ ╰─────────── definiens: 2
 6 │ ├───▶ }
   │ │         
   │ ╰───────── definiens: 1
───╯
